CZHDEV-2935 Fix animation on safari
CZHDEV-2937 Remove blue outline on safari

--- a/src/modules/decision_tree/decision_tree.scss
+++ b/src/modules/decision_tree/decision_tree.scss
@@ -14,6 +14,7 @@ $decision-tree-notch-size: pxToRem(48px);
   background-color: $colorBlack5;
   z-index: 1;
   position: relative;
+  outline: none;
 
   &__top {
     @include sizeCurve(margin-top, biggerRegular);
@@ -268,7 +269,7 @@ $decision-tree-notch-size: pxToRem(48px);
     }
 
     .form {
-      transition: transform 0.5s ease-in, opacity 0.2s ease;
+      transition: opacity 0.2s ease;
 
       &__fieldset-list {
         &--horizontal {
